# limitcut

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  config.rs  discord.rs  error.rs  instapost.rs  json_input.rs  main.rs
src/ffmpeg/: audio.rs  concat.rs  detect.rs  mod.rs  probe.rs
src/overlap/: correlate.rs  mod.rs
