[package]
name = "limitcut"
version = "0.6.0"
edition = "2021"
description = "Seamlessly combine two overlapping video recordings into one MP4 using ffmpeg"
license = "MIT"
repository = "https://github.com/Miu-B/limitcut"
homepage = "https://github.com/Miu-B/limitcut"
keywords = ["video", "ffmpeg", "concatenation", "audio", "correlation"]
categories = ["command-line-utilities", "multimedia::video"]

[[bin]]
name = "limitcut"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = "0.3"
which = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "multipart", "rustls-tls"] }

[dev-dependencies]
tempfile = "3.10"
